--- a/src/components/SearchBox/SearchBox.css
+++ b/src/components/SearchBox/SearchBox.css
@@ -12,21 +12,27 @@
   font-style: normal;
   font-display: swap;
 }
-.Upload__Button {
-  background-color: #0095FF;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-transform: uppercase;
-  color: white;
+.Form__Input {
+  padding: 0.56rem 1.75rem 0.56rem 0.5rem;
+  border: 1.5px solid rgba(192, 192, 192, 0.5);
   border-radius: 0.25rem;
-  border: 0;
-  font-size: 0.8125rem;
-  line-height: 1.125rem;
-  font-weight: 700;
-  padding: 0.75rem 0.5rem 0.75rem 0.5rem;
-  background-image: url(../../assets/Icons/upload.svg);
+  background-color: rgba(192, 192, 192, 0.1);
+  width: 100%;
+  background-image: url(../../assets/Icons/search.svg);
   background-repeat: no-repeat;
   background-position: center left 0.5rem;
-}/*# sourceMappingURL=UploadButton.css.map */
+}
+.Form__Input::-moz-placeholder {
+  padding-left: 1.75rem;
+  text-transform: capitalize;
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+}
+.Form__Input::placeholder {
+  padding-left: 1.75rem;
+  text-transform: capitalize;
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+}/*# sourceMappingURL=SearchBox.css.map */
