--- a/src/components/VideoPlayer/VideoPlayer.css
+++ b/src/components/VideoPlayer/VideoPlayer.css
@@ -1,1 +1,4 @@
-/*# sourceMappingURL=VideoPlayer.css.map */
+.Hero__Video {
+  width: 100%;
+  padding-bottom: 1rem;
+}/*# sourceMappingURL=VideoPlayer.css.map */
