--- a/src/components/CommentButton/CommentButton.css
+++ b/src/components/CommentButton/CommentButton.css
@@ -1,1 +1,43 @@
-/*# sourceMappingURL=CommentButton.css.map */
+@font-face {
+  font-family: "AvenirNext LT Pro";
+  src: url("../../assets/Font/AvenirNextLTPro-Bold.woff2") format("woff2"), url("../../assets/Font/AvenirNextLTPro-Bold.woff") format("woff"), url("../../assets/Font/AvenirNextLTPro-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "AvenirNext LT Pro";
+  src: url("../../assets/Font/AvenirNextLTPro-Regular.woff2") format("woff2"), url("../../assets/Font/AvenirNextLTPro-Regular.woff") format("woff"), url("../../assets/Font/AvenirNextLTPro-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+.Comment__Btn {
+  display: flex;
+  justify-content: flex-end;
+}
+.Comment__Button {
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  font-weight: 700;
+  background-color: #0095FF;
+  color: white;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+  background-image: url(../../assets/Icons/add_comment.svg);
+  background-repeat: no-repeat;
+  background-position: center left 1rem;
+  background-size: 1.175rem;
+}
+.Comment__Button:hover {
+  background-color: #000;
+}
+@media screen and (min-width: 768px) {
+  .Comment__Button {
+    max-width: 150px;
+  }
+}/*# sourceMappingURL=CommentButton.css.map */
