--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,14 +2,18 @@
 @use '../../styles/partials/mixins' as *;
 @use '../../styles/partials/fonts' as *;
 
-.Nav {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-bottom: 1rem;
+
+
+
+.Header {
+    
+    &__Nav {
+        @include padding (0,1,1,1);
+    }
     
     &__Wrapper {
         display: flex;
-        justify-content: space-between;
+        gap: 1rem;
         padding-bottom: 1rem;
     }
 }
