--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -1,7 +1,11 @@
+.Header__Logo {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    text-align: center;
+}
+
 .Logo {
     max-width: 7.5rem;
     max-height: 1.5625rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    display: inline-block;
+   
 }
