--- a/src/components/SearchBox/SearchBox.css
+++ b/src/components/SearchBox/SearchBox.css
@@ -12,8 +12,11 @@
   font-style: normal;
   font-display: swap;
 }
-.Form__Input {
-  padding: 0.56rem 1.75rem 0.56rem 0.5rem;
+.Header__Form {
+  width: 100%;
+}
+.Header__Input {
+  padding: 0.56rem 0rem 0.56rem 0rem;
   border: 1.5px solid rgba(192, 192, 192, 0.5);
   border-radius: 0.25rem;
   background-color: rgba(192, 192, 192, 0.1);
@@ -21,18 +24,21 @@
   background-image: url(../../assets/Icons/search.svg);
   background-repeat: no-repeat;
   background-position: center left 0.5rem;
+  background-size: 1rem;
 }
-.Form__Input::-moz-placeholder {
-  padding-left: 1.75rem;
+.Header__Input::-moz-placeholder {
+  padding-left: 2rem;
   text-transform: capitalize;
   font-size: 0.8125rem;
   line-height: 1.125rem;
   font-weight: 400;
+  width: 100%;
 }
-.Form__Input::placeholder {
-  padding-left: 1.75rem;
+.Header__Input::placeholder {
+  padding-left: 2rem;
   text-transform: capitalize;
   font-size: 0.8125rem;
   line-height: 1.125rem;
   font-weight: 400;
+  width: 100%;
 }/*# sourceMappingURL=SearchBox.css.map */
