--- a/src/components/Video/Video.css
+++ b/src/components/Video/Video.css
@@ -11,22 +11,4 @@
   font-weight: normal;
   font-style: normal;
   font-display: swap;
-}
-.Header__Button {
-  background-color: #0095FF;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-transform: uppercase;
-  color: white;
-  border-radius: 0.25rem;
-  border: 0;
-  font-size: 0.8125rem;
-  line-height: 1.125rem;
-  font-weight: 700;
-  padding: 0.75rem 0.5rem 0.75rem 0.5rem;
-  background-image: url(../../assets/Icons/upload.svg);
-  background-repeat: no-repeat;
-  background-position: center left 0.5rem;
-}/*# sourceMappingURL=UploadButton.css.map */
+}/*# sourceMappingURL=Video.css.map */
