--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -1,10 +1,24 @@
-.Header__Logo {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+@use '../../styles/partials/variables' as *;
+@use '../../styles/partials/mixins' as *;
+@use '../../styles/partials/fonts' as *;
+
+.header__logo {
+
+    @include padding (1,0,1,0);
     text-align: center;
+
+    @include tablet {
+        width: 20%;
+        @include padding (1.5,0,1,2.25);
+
+    }
+
+    @include desktop {
+        @include padding (1.5,0,1,8.5);
+    }
 }
 
-.Logo {
+.logo {
     max-width: 7.5rem;
     max-height: 1.5625rem;
    
