--- a/src/components/VideoPlayer/VideoPlayer.scss
+++ b/src/components/VideoPlayer/VideoPlayer.scss
@@ -1,7 +1,31 @@
+@use '../../styles/partials/variables' as *;
+@use '../../styles/partials/mixins' as *;
+@use '../../styles/partials/fonts' as *;
+
+
+
 .Hero {
 
-    &__Video {
+
+    &__Player {
         width: 100%;
         padding-bottom: 1rem;
+        
+
+        @include tablet {
+            max-width: 100%;
+            background-color: black;
+            aspect-ratio: 16 / 9 ;
+            max-height: 48vh;
+            padding-bottom: 0;
+            margin-bottom: 1rem;
+        }
     }
+    
+
+    
+
+    
+
+    
 }
