--- a/src/components/VideoDescription/VideoDescription.scss
+++ b/src/components/VideoDescription/VideoDescription.scss
@@ -4,19 +4,29 @@
 
 
 
-.Hero {
+.hero {
 
-    &__Content {
+    &__content {
         @include padding (0,1,1,1);
+        
+        @include tablet{
+            @include padding (0,2,1,2);
+        }
+        
     }
 
-    &__Title {
+    &__title {
         @include mobile-pageheader;
         margin: 0;
         padding-bottom: 1rem;
+
+        @include tablet {
+            @include pageheader;
+            @include padding (0.4,0,0.25,0);
+        }
     }
 
-    &__Wrapper {
+    &__wrapper {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -24,62 +34,111 @@
         border-bottom: 1px solid $mercury;
         border-top: 1px solid $mercury;
         @include padding (1,0,1,0);
+
+        @include tablet {
+            border-top: none;
+            @include padding (0,0,0.5,0);
+        }
     }
 
-    &__Left {
+    &__left {
         display: flex;
         flex-direction: column;
         width: 40%;
         gap: 1rem;
 
+        @include tablet {
+            flex-direction: row;
+            width: auto;
+            gap: 2rem;
+        }
+
     }
 
-    &__Channel {
+    &__channel {
         margin: 0;
         @include mobile-bodyfont;
         font-weight: 700;
 
+        @include tablet {
+            @include bodyfont;
+            font-weight: 700;
+        }
+
     }
 
-    &__Date {
+    &__date {
         margin: 0;
         @include mobile-bodyfont;
         color: silver;
+
+        @include tablet {
+            @include bodyfont;
+
+        }
+
     }
 
-    &__Right {
+    &__right {
         display: flex;
         flex-direction: column;
         gap: 1rem;
         width: 40%;
+
+        @include tablet {
+            flex-direction: row;
+            width: auto;
+        }
     }
 
-    &__Views {
+    &__views {
         margin: 0;
         @include mobile-bodyfont;
         color: silver;
         padding-left: 2rem;
         background-image: url(../../assets/Icons/views.svg);
         background-repeat: no-repeat;
+
+        @include tablet {
+            @include bodyfont;
+
+        }
+
     }
 
-    &__Likes {
+    &__likes {
         margin: 0;
         @include mobile-bodyfont;
         color: silver;
         padding-left: 1.5rem;
         background-image: url(../../assets/Icons/likes.svg);
         background-repeat: no-repeat;
+
+        @include tablet {
+            @include bodyfont;
+            
+        }
     }
 
-    &__Description {
+    &__description {
         margin: 0;
         @include mobile-bodyfont;
         @include padding (1,0,1,0);
+
+        @include tablet {
+            @include bodyfont;
+            @include padding (1.5,0,2,0);
+            
+        }
     }
 
-    &__Counts {
+    &__counts {
         margin: 0;
         @include mobile-subheader;
+
+        @include tablet {
+            @include subheader;
+            
+        }
     }
 }
