--- a/src/components/CommentButton/CommentButton.scss
+++ b/src/components/CommentButton/CommentButton.scss
@@ -2,33 +2,39 @@
 @use '../../styles/partials/mixins' as *;
 @use '../../styles/partials/fonts' as *;
 
-.Comment {
-    &__Btn {
+.comment {
+    &__btn {
         display: flex;
         justify-content: flex-end;
+
+        @include tablet {
+            width: 25%
+        }
     }
 
-    &__Button {
+    &__button {
     @include padding (0.5,0.5,0.5,0.5);
     @include mobile-sectionheader;
-    background-color: $secondary-color;
     color: white;
     text-transform: uppercase;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     width: 100%;
+    height: 2.5rem;
+    background-color: $secondary-color;
     background-image: url(../../assets/Icons/add_comment.svg);
     background-repeat: no-repeat;
     background-position: center left 1rem;
     background-size: 1.175rem;
   
         &:hover {
-          background-color: #000;
+          background-color: #0065AD;
         }
 
         @include tablet {
-            max-width: 150px;
+
+            @include sectionheader;
         }
     }
 }
