--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -2,9 +2,9 @@
 @use '../../styles/partials/mixins' as *;
 @use '../../styles/partials/fonts' as *;
 
-.Comment {
+.comment {
 
-    &__Form {
+    &__form {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -14,44 +14,23 @@
         gap: 1rem;
         
         @include tablet {
-            width: 80%;
-            margin-left: 4rem;    
-            padding-bottom: 1.5rem;  
-            gap: 0.5rem;
-            
+            gap: 1.25rem;
         }
-    
-        @include desktop {
-            width: 44%;
-            margin-left: 17rem;
-            gap: 0.75rem;
-        }
-    
     }
 
-    &__Header {
+    &__header {
         display: flex;
         flex-direction: row;
         align-items: flex-start;
         padding-top: 1.25rem;
-        width: 2.75rem;
-
-        @include tablet {
-            width: 3.5rem;
-        }
-
-        &--List {
-            padding-top: 0;
-            width: 2.25rem;
-        }
-        
+        width: 2.75rem;        
     }
 
-    
+    &__avatar {
+        padding-left: 0;
+    }
 
-
-
-    &__Wrapper {
+    &__wrapper {
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -59,38 +38,50 @@
 
     }
 
-    &__Label {
+    &__label {
         @include mobile-sectionheader;
         color: silver;
         text-transform: uppercase;
+    }
+
+    &__wrapper-2 {
 
         @include tablet {
-            font-size: 0.825rem;
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            height: 55%;
         }
     }
 
-    &__Input {
+    &__input {
         
         @include padding (0.65,0.65,3,0.65);
         border: 1.5px solid rgba(192, 192, 192, 0.5);
         border-radius: 0.25rem;
         @include mobile-subheader;
+        font-family: AvenirNext LT Pro;
         font-weight: 400;
         background-color: #fafafa;
         margin-bottom: 1rem;
+        width: 100%;
             
-
         @include tablet {
-        font-size: 0.85rem;
-        margin-bottom: 1.5rem;
-            
+            @include padding (0.5,0,0,0);
+            @include bodyfont;
+            text-indent: 1rem;
+            width: 71.25%;
+            margin: 0;
+
         }
+        
     }    
 
-    &__Input::placeholder {
+    &__input::placeholder {
         color: $primary-color;
         width: 100%;
         height: auto;
+        font-family: AvenirNext LT Pro;
         
     }
 }
