--- a/src/components/CommentListData/CommentListData.scss
+++ b/src/components/CommentListData/CommentListData.scss
@@ -2,9 +2,9 @@
 @use '../../styles/partials/mixins' as *;
 @use '../../styles/partials/fonts' as *;
 
-.Comment {
+.comment {
 
-    &__Item {
+    &__item {
         @include mobile-bodyfont;
         list-style: none;
         margin: 0;
@@ -12,10 +12,22 @@
         justify-content: space-between;
         border-bottom: 1px solid silver;
         padding-top: 1rem;
+
+        @include tablet {
+            @include bodyfont;
+        }
         
     } 
 
-    &__Img {
+    &__header {
+
+        &--list {
+            padding-top: 0;
+            width: 2.5rem;
+        }
+    }
+
+    &__img {
         width: 2.25rem;
         height: 2.25rem;
         border-radius: 50%;
@@ -25,41 +37,45 @@
         background-color: $mercury;
 
         @include tablet {
-            height: 3rem;
-            width: 3rem;
+            height: 2.5rem;
+            width: 2.5rem;
         }
     }
 
-    &__Wrapper {
+    &__wrapper {
 
-        &--List {
+        &--list {
             width: 80%;
+
+            @include tablet {
+                width: 91%;
+            }
         }
     }
 
     
 
-    &__Name {
+    &__name {
         
         font-weight: 700;
         margin: 0;
     }
 
-    &__Date {
+    &__date {
         color: silver;
         margin: 0;
         
     }
 
-    &__Content {
-        width: 100% auto;
+    &__content {
+        width: 100%;
 
-        @include desktop {
-            line-height: 1.375rem ;
+        @include tablet {
+            margin-top: 0.5rem;
         }
     }
 
-    &__Top {
+    &__top {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
