--- a/src/components/CommentSection/CommentSection.scss
+++ b/src/components/CommentSection/CommentSection.scss
@@ -3,8 +3,12 @@
 @use '../../styles/partials/fonts' as *;
 
 
-.Comment {
+.comment {
     @include padding (0,1,0,1);
+
+    @include tablet {
+        @include padding (0,2,0,2);
+    }
 
     
 }
