--- a/src/components/SearchBox/SearchBox.scss
+++ b/src/components/SearchBox/SearchBox.scss
@@ -19,12 +19,12 @@
         @include padding (0.56,0,0.56,0);
         border: 1.5px solid rgba(192, 192, 192, 0.5);
         border-radius: 0.25rem;
-        background-color: rgba(192, 192, 192, 0.1);
         width: 100%;
         background-image: url(../../assets/Icons/search.svg);
         background-repeat: no-repeat;
         background-position: center left 0.5rem;
         background-size: 1rem;
+        background-color: #fafafa;
 
         @include tablet {
             @include padding (0.625,0.5,0.625,0.5);
@@ -38,4 +38,5 @@
         width: 100%;
 
     }
+    
 }
