--- a/src/components/VideoDescription/VideoDescription.scss
+++ b/src/components/VideoDescription/VideoDescription.scss
@@ -6,13 +6,14 @@
 
 .hero {
 
-    &__content {
-        @include padding (0,1,1,1);
+    @include padding (0,1,1,1);
         
-        @include tablet{
-            @include padding (0,2,1,2);
-        }
-        
+    @include tablet{
+        @include padding (0,2,1,2);
+    }
+
+    @include desktop {
+        padding: 0;
     }
 
     &__title {
@@ -38,6 +39,10 @@
         @include tablet {
             border-top: none;
             @include padding (0,0,0.5,0);
+        }
+
+        @include desktop {
+            padding-right: 1.5rem;
         }
     }
 
@@ -129,6 +134,10 @@
             @include bodyfont;
             @include padding (1.5,0,2,0);
             
+        }
+
+        @include desktop {
+            padding-right: 1rem;
         }
     }
 
