small fix on desktop style

--- a/src/components/CommentListData/CommentListData.scss
+++ b/src/components/CommentListData/CommentListData.scss
@@ -25,6 +25,12 @@
         
     } 
 
+    &__item:last-child {
+        @include desktop {
+            border-bottom: none;
+        }
+    }
+
     &__header {
 
         &--list {
