--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -46,6 +46,7 @@
         border-radius: 4px;
         aspect-ratio: 16 / 9;
         object-fit: cover;
+        height: 7.75vh;
         
     }
 
