--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -2,20 +2,31 @@
 @use '../../styles/partials/mixins' as *;
 @use '../../styles/partials/fonts' as *;
 
-.header__logo {
+.header {
 
-    @include padding (1,0,1,0);
-    text-align: center;
+    &__logo {
+        @include padding (1,0,1,0);
+        text-align: center;
 
-    @include tablet {
-        width: 20%;
-        @include padding (1.5,0,1,2.25);
+        @include tablet {
+            width: 20%;
+            @include padding (1.5,0,1,2.25);
+
+        }
+
+        @include desktop {
+            @include padding (1.5,0,1,8.5);
+        }
 
     }
 
-    @include desktop {
-        @include padding (1.5,0,1,8.5);
+    &__link {
+        text-decoration: none;
     }
+
+    
+
+
 }
 
 .logo {
