--- a/src/components/UploadButton/UploadButton.scss
+++ b/src/components/UploadButton/UploadButton.scss
@@ -28,14 +28,15 @@
         @include mobile-subheader;
         text-transform: uppercase;
         color: white;
-        @include padding (0.75,0.5,0.75,0.5);
+        @include padding (0.875,0.5,0.625,0.5);
         background-color: $secondary-color;
         background-image: url(../../assets/Icons/upload.svg);
         background-repeat: no-repeat;
         background-position: center left 0.5rem;
+        text-decoration: none;
 
         @include tablet {
-            @include padding (0.625,0.5,0.625,0.5);
+            @include padding (0.875,0.5,0.5,0.5);
         }
     
     }
