--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -35,6 +35,10 @@
         padding: 0;
     }
 
+    &__link {
+        text-decoration: none;
+    }
+
     &__img {
         aspect-ratio: 16 / 9;
         max-width: 100%;
@@ -46,7 +50,6 @@
         border-radius: 4px;
         aspect-ratio: 16 / 9;
         object-fit: cover;
-        height: 7.75vh;
         
     }
 
@@ -66,6 +69,7 @@
     &__title {
         margin: 0;
         @include mobile-sectionheader;
+        color: $primary-color;
 
         @include tablet {
             @include subheader;
@@ -76,6 +80,7 @@
     &__channel {
         margin: 0;
         @include mobile-bodyfont;
+        color: $primary-color;
 
         @include tablet {
             @include bodyfont;
