--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -69,6 +69,7 @@
         font-weight: 400;
         margin-bottom: 1rem;
         width: 100%;
+        resize: none;
             
         @include tablet {
             @include padding (0.5,0,0,0);
