--- a/src/components/UploadForm/UploadForm.scss
+++ b/src/components/UploadForm/UploadForm.scss
@@ -2,7 +2,7 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/fonts" as *;
 
-.uploadPage {
+.uploadpage {
   &__hero {
     @include padding(1.5, 1, 0, 1);
 
@@ -65,7 +65,6 @@
     border-radius: 4px;
     width: 100%;
     aspect-ratio: 16 / 9;
-    object-fit: cover;
 
     @include tablet {
       width: 49%;
@@ -73,6 +72,7 @@
 
     @include desktop {
       width: 100%;
+      max-height: 11.25rem;
     }
   }
 
